fix(roles): fix dialog scrollbar and add input padding

--- a/Web.IdP/ClientApp/src/admin/style.css
+++ b/Web.IdP/ClientApp/src/admin/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type='text'],
+input[type='email'],
+input[type='password'],
+input[type='tel'],
+input[type='search'] {
+    padding-left: 1rem;
+}
